Fixed an issue where the logo was too big on small mobiles 320px. Added further images to the about page and resized headings.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -202,7 +202,14 @@ main {
     padding: 5%;
 }
 
-/* Media query: medium and larger phones (375px and up) */
+/* Media query: small phones (320px) */
+@media screen and (max-width: 320px) {
+    #logo {
+        font-size: 210%;
+    }
+}
+
+/* Media query: medium and larger phones (320px and up) */
 @media screen and (min-width: 320px) {
     /* About page */
     .about-images {
@@ -249,7 +256,7 @@ main {
         margin: 0 0.5rem;
     }
 
-    /* About */
+    /* About Page */
     #about {
         padding-left: 28%;
         padding-right: 28%;
@@ -296,6 +303,12 @@ main {
 @media screen and (min-width: 992px) {
     #menu a:hover {
         border-bottom: 1px solid #000000;
+    }
+
+    /* About Page */
+    #about-heading {
+        font-size: xx-large;
+        text-align: center;
     }
 
     /* Portfolio */
